public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/1888/source/compile
source.c: In function ‘main’:
source.c:8:5: error: stray ‘\’ in program
     printf("%d", n\n);
     ^
source.c:8:20: error: expected ‘)’ before ‘n’
     printf("%d", n\n);
                    ^
